# dev-on

./: Cargo.toml  LICENSE  README.md
shell/: devon.bash
src/: config.rs  main.rs  project.rs
src/commands/: add.rs  edit.rs  get.rs  init.rs  list.rs  mod.rs  remove.rs
