[package]
name = "dev-on"
version = "0.1.0"
edition = "2021"
authors = ["Cory Zue <cory@coryzue.com>"]
description = "A project switcher for development environments"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
